After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785306 - FileChooserNativeQuartz: two fixes
FileChooserNativeQuartz: two fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Quartz
3.22.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-quartz maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-07-23 10:14 UTC by Tom Schoonjans
Modified: 2017-08-24 11:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Two fixes for the native quartz file dialog (5.62 KB, patch)
2017-07-23 10:16 UTC, Tom Schoonjans
none Details | Review
Three fixes for GtkNativeFileChooserQuartz (7.84 KB, patch)
2017-08-01 16:40 UTC, Tom Schoonjans
none Details | Review

Description Tom Schoonjans 2017-07-23 10:14:44 UTC
I am proposing two commits that improve upon my work in https://bugzilla.gnome.org/show_bug.cgi?id=784723.

First commit in patch restores support on Mountain Lion and Mavericks. I was using Objective-C generics which were introduced only in Xcode 7. I recommend that this patch is reverted when the minimum supported version of macOS is set to Yosemite (10.10)

Second commit improves how the file filter box is shown. Instead of using conditional compilation, this patch uses a run time check to see if the required method is available.
Comment 1 Tom Schoonjans 2017-07-23 10:16:43 UTC
Created attachment 356223 [details] [review]
Two fixes for the native quartz file dialog
Comment 2 Matthias Clasen 2017-07-24 17:49:00 UTC
Review of attachment 356223 [details] [review]:

looks ok to me
Comment 3 Tom Schoonjans 2017-07-28 08:43:06 UTC
There's one more thing that bothers me about the macOS file chooser: after closing, the parent's focus is not restored. This will require some investigation, but in the meantime the two patches here can be added to both gtk-3-22 and master.
Comment 4 Tom Schoonjans 2017-08-01 16:40:52 UTC
Created attachment 356749 [details] [review]
Three fixes for GtkNativeFileChooserQuartz

I added a patch for restoring focus after closing the dialog.

This was the last thing I wanted to fix.
Comment 5 Tom Schoonjans 2017-08-08 05:45:03 UTC
Can this one please be merged in? Thanks
Comment 6 Tom Schoonjans 2017-08-23 05:44:26 UTC
Can someone please merge these commits in? One of them is necessary to ensure compilation on Mavericks and Mountain Lion...

Thanks
Comment 7 Tom Schoonjans 2017-08-24 11:25:52 UTC
Thanks!